# rust_api

./: .env.example  Cargo.toml  README.md
migrations/2020-07-11-180618_create_links/: up.sql
src/: db_connection.rs  main.rs  schema.rs
src/api/: links.rs  mod.rs  products.rs
src/models/: link.rs  mod.rs
